<resources>
    <string name="app_name">MedicalHistory</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_clinicas">Clinicas Disponibles</string>
    <string name="menu_medicos">Medicos tratantes</string>
    <string name="menu_recetas">Recetas recibidas</string>
    <string name="menu_medicinas">Medicinas en Casa</string>
    <string name="menu_medicinas_alergia">Medicinas alergicas</string>
    <string name="menu_citas_medicas">Citas Medicas</string>
    <string name="menu_diagnosticos">Enfermedades pre-existentes</string>

    <string name="action_save">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
